Yamls/cytotox/viablecells.yaml
kind: Service
apiVersion: v1
metadata:
  name: viablecells-service
  namespace: nanopot
spec:
  selector:
    app: viablecells-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1
kind: Deployment
metadata:
  name: viablecells-app
  namespace: nanopot
spec:
  selector:
    matchLabels:
      app: viablecells-app
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      name: viablecells-app
      labels:
        app: viablecells-app
    spec:
      containers:
      - name: viablecells-app
        image: nanosolveit/viablecells
        ports:
        - containerPort: 80
