Yamls/cytotox/zetapot.yaml
kind: Service
apiVersion: v1
metadata:
  name: zetapot-app
  namespace: nanopot
spec:
  selector:
    app: zetapot-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1
kind: Deployment
metadata:
  name: zetapot-app
  namespace: nanopot
spec:
  selector:
    matchLabels:
      app: zetapot-app
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      name: zetapot-app
      labels:
        app: zetapot-app
    spec:
      containers:
      - name: zetapot-app
        image: nanosolveit/zetapot
        ports:
        - containerPort: 80
