Yamls/cytotox/nanobioingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nanobio-app-secure
  namespace: nanopot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - nanobio.cloud.nanosolveit.eu
    secretName: nanobio-app-cert-ingress
  rules:
  - host: nanobio.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: nanobio-service
          servicePort: 80
        path: /
