Yamls/cytotox/nanoinhaleingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nanoinhale-app-secure
  namespace: nanopot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - nanoinhale.cloud.nanosolveit.eu
    secretName: nanoinhale-app-cert-ingress
  rules:
  - host: nanoinhale.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: nanoinhale-service
          servicePort: 80
        path: /
