Yamls/cytotox/sbpotingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sbpot-app-secure
  namespace: nanopot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sbpot.cloud.nanosolveit.eu
    secretName: sbpot-app-cert-ingress
  rules:
  - host: sbpot.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: sbpot-service
          servicePort: 80
        path: /
