Yamls/cytotox/viablecellsingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: viablecells-app-secure
  namespace: nanopot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - viablecells.cloud.nanosolveit.eu
    secretName: viablecells-app-cert-ingress
  rules:
  - host: viablecells.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: viablecells-service
          servicePort: 80
        path: /
