Yamls/cytotox/zetapoting.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zetapot-app-secure
  namespace: nanopot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - zetapot.cloud.nanosolveit.eu
    secretName: zetapot-app-cert-ingress
  rules:
  - host: zetapot.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: zetapot-app
          servicePort: 80
        path: /
